Minor spacing fix.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -30,7 +30,7 @@ tr.odd {background-color: #ccc;}
 #footer {clear: both; margin-top: 1em; padding-top: 2em; font-size: 75%;}
 #footer > div {background-color: #74c4ab; color: #0a3a34;}
 #footer p {padding: 0.35em;}
-#footer a {color: inherit; margin: 0.5em;}
+#footer a {color: inherit;}
 
 #wiki-advertisement {float: right; width: 10em; margin: 0.5em; border: 2px solid #0a3a34; background-color: #74c4ab; padding: 0.25em;}
 
